# cachetory

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  dependabot.yml  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  release.yml
.github/workflows/: check.yml  docs.yml  lint.yml  publish.yml  tests.yml
cachetory/backends/: __init__.py  memory.py
cachetory/backends/async_/: __init__.py  django.py  dummy.py  memory.py  redis.py
cachetory/backends/sync/: __init__.py  django.py  dummy.py  memory.py  redis.py
cachetory/caches/: __init__.py  async_.py  private.py  sync.py
cachetory/compressors/: __init__.py  zstd_.py
cachetory/decorators/: async_.py  private.py  shared.py  sync.py
cachetory/interfaces/: __init__.py  backend.py  serializers.py
cachetory/interfaces/backends/: async_.py  private.py  shared.py  sync.py
cachetory/private/: __init__.py  asyncio.py  datetime.py  functools.py  typing.py
cachetory/serializers/: __init__.py  chained.py  json.py  msgpack.py  noop.py  pickle.py  shared.py
cachetory/serializers/compressors/: __init__.py  zlib.py  zstd.py
cachetory/shortcuts/: __init__.py  async_.py  sync.py
docs/: caches.md  decorators.md  getting-started.md  index.md  shortcuts.md
docs/backends/: django.md  dummy.md  memory.md  redis.md
docs/serializers/: chained.md  json.md  msgpack.md  noop.md  pickle.md
docs/serializers/compressors/: index.md  zlib.md  zstandard.md
tests/: conftest.py  support.py
tests/backends/: test_async.py  test_memory.py  test_sync.py
tests/backends/async_/: test_django.py  test_dummy.py  test_memory.py  test_redis.py
tests/backends/django/: settings.py
tests/backends/sync/: test_django.py  test_memory.py  test_redis.py
tests/caches/: test_async.py  test_sync.py
tests/decorators/: test_async.py  test_private.py  test_shared.py  test_sync.py
tests/private/: test_datetime.py  test_functools.py
tests/serializers/: test_chained.py  test_json.py  test_msgpack.py
tests/serializers/compressors/: test_chained.py  test_zstd.py
